--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "start": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0"
+    "@nuxtjs/supabase": "0.3.0",
+    "nuxt": "3.1.0"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.1.3"
+    "@nuxt/image-edge": "^1.1.0-28374834.2dee537",
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "@vueuse/nuxt": "^9.6.0"
   }
 }
